--- a/devtools/client/index.html
+++ b/devtools/client/index.html
@@ -7,7 +7,8 @@
     <title>devtools client</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="ma"></div>
     <script src="./index.tsx"></script>
+    <script src="../_dev/devtools.js"></script>
   </body>
 </html>
