--- a/devtools/client/index.html
+++ b/devtools/client/index.html
@@ -6,16 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>devtools client</title>
     <base href="/" />
-  </head>
-  <body>
-    <div id="app"></div>
     <script>
+      window.process = {
+        env: {
+          DEVTOOLS_ENV: '<%= __ENV__ %>',
+        },
+      }
       window.serverConfig = {
         host: '<%= __HOST__ %>',
         port: '<%= __PORT__ %>',
         path: '<%- __PUBLIC_PATH__ %>',
       }
     </script>
+  </head>
+  <body>
+    <div id="app"></div>
     <script src="../native/index.ts"></script>
     <script src="./index.tsx"></script>
   </body>
