refactor: pack to ts

--- a/framework/web.html
+++ b/framework/web.html
@@ -23,7 +23,7 @@
     <dom-bind>
       <template>
         <demo-app></demo-app>
-        <my-button bindtap="[[myClick]]" attr$="{{  attr}}">my click{{ attr}}</my-button>
+        <ma-button bindtap="[[myClick]]" attr$="{{  attr}}">my click{{ attr}}</ma-button>
       </template>
     </dom-bind>
     <script>
