fix: dev devtools

--- a/packages/devtools/client/index.html
+++ b/packages/devtools/client/index.html
@@ -16,6 +16,7 @@
         host: '<%= __HOST__ %>',
         port: '<%= __PORT__ %>',
         path: '<%- __PUBLIC_PATH__ %>',
+        wsPath: '<%- __WS_PATH__ %>',
       }
     </script>
   </head>
