chore: docs & cli

--- a/packages/devtools/client/index.html
+++ b/packages/devtools/client/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>devtools client</title>
     <base href="/" />
+    <link rel="shortcut icon" href="./images/favicon-32x32.png" />
     <script>
       window.process = {
         env: {
